<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kuwait.myapplication.Main2Activity">
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="100dp"/>
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:layout_constraintTop_toBottomOf="@id/result"
         android:text="@string/button7"
         android:textSize="20sp"
         style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintLeft_toRightOf="@id/button7"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button8"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintLeft_toRightOf="@id/button8"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button9"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintLeft_toLeftOf="@id/button9"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button6"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintLeft_toLeftOf="@id/button8"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button5"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintLeft_toLeftOf="@id/button7"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button4"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintLeft_toLeftOf="@id/button6"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button3"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintLeft_toLeftOf="@id/button5"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button2"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintLeft_toLeftOf="@id/button4"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button1"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintLeft_toLeftOf="@id/button3"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonDot"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintLeft_toLeftOf="@id/button2"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/button0"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintLeft_toLeftOf="@id/button1"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonEq"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintLeft_toRightOf="@id/button9"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonDiv"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonMult"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/buttonDiv"
        app:layout_constraintLeft_toRightOf="@id/button6"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonMult"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/buttonMult"
        app:layout_constraintLeft_toRightOf="@id/button3"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonAdd"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonMin"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAdd"
        app:layout_constraintLeft_toRightOf="@id/buttonDot"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonMin"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/buttonMin"
        app:layout_constraintLeft_toRightOf="@id/buttonDot"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/buttonClear"
        android:textSize="20sp"/>
</android.support.constraint.ConstraintLayout>
